--- a/details/details.html
+++ b/details/details.html
@@ -1,26 +1,26 @@
-v<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kumbo Said | Details</title>
-  <link rel="icon" type="image/png" href="image2.png" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="../image2.png" />
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="logo-mark" aria-label="Kumbo Said Avatar">
-      <img src="image2.png" alt="Kumbo Said Avatar" class="header-avatar" />
+      <img src="../image2.png" alt="Kumbo Said Avatar" class="header-avatar" />
     </div>
     <nav class="header-nav">
-      <a class="nav-link" href="index.html" aria-label="Profile">
+      <a class="nav-link" href="../home/index.html" aria-label="Profile">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="12" cy="8" r="4" fill="currentColor"/>
           <path d="M20 21C20 16.0294 16.4183 12 12 12C7.58172 12 4 16.0294 4 21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
         </svg>
         <span class="nav-label">Profile</span>
       </a>
-      <a class="nav-link active" href="details.html" aria-label="Details">
+      <a class="nav-link active" href="../details/details.html" aria-label="Details">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
           <line x1="7" y1="8" x2="17" y2="8" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
