--- a/home/index.html
+++ b/home/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KUMBO SAID | Portfolio</title>
-  <link rel="icon" type="image/png" href="../image2.png" />
+  <link rel="icon" type="image/png" href="../assets/image2.png" />
   <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="logo-mark" aria-label="Kumbo Said Avatar">
-      <img src="../image2.png" alt="Kumbo Said Avatar" class="header-avatar" />
+      <img src="../assets/image2.png" alt="Kumbo Said Avatar" class="header-avatar" />
     </div>
     <nav class="header-nav">
       <a class="nav-link active" href="../home/index.html" aria-label="Profile">
@@ -60,7 +60,7 @@
       </nav>
 
       <figure class="hero-image" aria-label="Portrait">
-        <img src="../image1.jpg" alt="Kumbo Said portrait" class="profile-picture" />
+        <img src="../assets/image1.jpg" alt="Kumbo Said portrait" class="profile-picture" />
       </figure>
 
       <div class="hero-details">
