--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </svg>
         <span class="nav-label">Profile</span>
       </a>
-      <a class="nav-link" href="details/details.html" aria-label="Details">
+      <a class="nav-link" href="details/" aria-label="Details">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <rect x="3" y="3" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
           <line x1="7" y1="8" x2="17" y2="8" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
