--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <span class="info-icon">✉️</span>
             <div class="info-text">
               <strong>Email</strong>
-              <p><a href="mailto:kumbosaid22@gmail.com">kumbosaid22@gmail.com</a></p>
+              <p>kumbosaid22@gmail.com</p>
             </div>
           </li>
         </ul>
