--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="assets/image2.png" alt="Kumbo Said Avatar" class="header-avatar" />
     </div>
     <nav class="header-nav">
-      <a class="nav-link active" href="index" aria-label="Profile">
+      <a class="nav-link active" href="/" aria-label="Profile">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <circle cx="12" cy="8" r="4" fill="currentColor"/>
           <path d="M20 21C20 16.0294 16.4183 12 12 12C7.58172 12 4 16.0294 4 21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
