--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KUMBO SAID | Portfolio</title>
+  <title>KUMBO SAID </title>
   <link rel="icon" type="image/png" href="assets/image2.png" />
   <link rel="stylesheet" href="styles.css" />
 </head>
