--- a/index.html
+++ b/index.html
@@ -126,8 +126,16 @@
   </main>
 
   <footer class="site-footer">
-    <p>© 2025 Kumbo Said. All rights reserved.</p>
-  </footer>
+  <p>© <span id="year"></span> Kumbo Said. All rights reserved.</p>
+</footer>
+
+<script>
+  // Get the current year
+  const currentYear = new Date().getFullYear();
+  // Insert it into the span with id="year"
+  document.getElementById('year').textContent = currentYear;
+</script>
+
 
   <script src="script.js" defer></script>
 </body>
